loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:2: error: not found: value nb
  nb=0
  ^Poucet1:6: error: not found: value nb
      nb=nb+1
      ^Poucet1:8: error: not found: value nb
   if(nb<=2){
      ^Poucet1:11: error: not found: value nb
   if(nb>=3){
      ^